@@ -34,7 +34,6 @@ public class ChatMessageRedisRepository {
 
         String key = teamMessageKey + teamId;
         Set<TypedTuple<String>> result;
-        List<String> list;
 
         if (messageId < 0) {
             result = redisTemplate.opsForZSet()
@@ -59,7 +58,7 @@ public class ChatMessageRedisRepository {
 
         List<String> list = result.stream()
                 .map(TypedTuple::getValue)
-                .collect(Collectors.toList());
+                .toList();
 
         return list.stream()
                 .map(json -> {
